refactor: switch params to get and code relocation